@@ -66,5 +66,7 @@
         <file>toolicon/32x32/group_plus@2x.png</file>
         <file>toolicon/32x32/rotation.png</file>
         <file>toolicon/32x32/rotation@2x.png</file>
+        <file>toolicon/32x32/midpoint.png</file>
+        <file>toolicon/32x32/midpoint@2x.png</file>
     </qresource>
 </RCC>
