@@ -163,6 +163,7 @@ const QString angle2Spl_    = angle2_V + spl_;
 const QString angle1SplPath = angle1_V + splPath;
 const QString angle2SplPath = angle2_V + splPath;
 const QString seg_          = QStringLiteral("Seg_");
+const QString currentLength = QStringLiteral("CurrentLength");
 
 const QStringList builInVariables = QStringList() << line_
                                                   << angleLine_
@@ -179,4 +180,5 @@ const QStringList builInVariables = QStringList() << line_
                                                   << angle2Spl_
                                                   << angle1SplPath
                                                   << angle2SplPath
-                                                  << seg_;
+                                                  << seg_
+                                                  << currentLength;
