@@ -170,6 +170,7 @@ extern const QString angle2Spl_;
 extern const QString angle1SplPath;
 extern const QString angle2SplPath;
 extern const QString seg_;
+extern const QString currentLength;
 
 extern const QStringList builInVariables;
 
