@@ -103,6 +103,7 @@ enum class Tool : ToolVisHolderType
     UnionDetails,
     Group,
     Rotation,
+    Midpoint,
     LAST_ONE_DO_NOT_USE //add new stuffs above this, this constant must be last and never used
 };
 
